--- a/style/style.css
+++ b/style/style.css
@@ -13,6 +13,10 @@ body {
   overflow-x: hidden;
 }
 
+.contato_container {
+  background-color: #ebebeb;
+}
+
 .keytogo-container {
   width: 100%;
   max-width: 100%;
@@ -113,6 +117,7 @@ nav a:hover:after {
 .hero-text p {
   font-size: 1.2rem;
   color: #fafafa;
+  text-align: justify;
 }
 
 .hero-image {
